---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/unknown_module_field_in_constant"
---
error: Unknown module value
  ┌─ src/two.gleam:6:16
  │
6 │ pub const it = one.B
  │                ^ Did you mean `A`?

The module `one` does not have a `B` value.
